# cip309

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE-docs  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml  registry-addition.md  spec-ambiguity.md
.github/workflows/: ci.yml
cddl/: README.md
conformance/: README.md  parity-matrix.json
conformance/cose/: sign1-build.json
conformance/cross-service/: external-sealed-record-hybrid.json  external-sealed-record.json
conformance/merkle/: leaves-list-kat.json  rfc9162-sha256-inclusion-proof-kat.json  rfc9162-sha256-root-kat.json
conformance/poe-record/: maximal-record-with-extension-keys.json
conformance/sealed-poe/: unwrap-duplicate-recipient.json  unwrap-hybrid-rechunked.json  unwrap-n1-empty.json  wrap-hybrid-n1.json  wrap-n1-empty.json  wrap-negative.json
conformance/validator/: validator-negative.json
examples/: README.md
examples/python/: .gitignore  README.md  end_to_end.py  merkle_batch.py  pyproject.toml  sealed_poe.py  validate_record.py  verify_offline.py
examples/python/cip309_examples/: __init__.py  cbor_canonical.py  cbor_walker.py  cid_validator.py  cip_309_validator.py  cose_sign1.py  ecies_sealed_poe.py  ed25519.py  hash_dual.py  hkdf.py  merkle_leaves_list.py  merkle_sha2_256.py  mlkem768x25519.py  off_host_sign.py  passphrase.py  passphrase_kdf_unwrap.py  seed_derive.py  standalone_verifier.py  x25519.py
examples/python/label309_examples/: __init__.py  cbor_canonical.py  cbor_walker.py  cid_validator.py  cose_sign1.py  ecies_sealed_poe.py  ed25519.py  hash_dual.py  hkdf.py  label309_validator.py  merkle_leaves_list.py  merkle_sha2_256.py  mlkem768x25519.py  off_host_sign.py  passphrase.py  passphrase_kdf_unwrap.py  seed_derive.py  standalone_verifier.py  x25519.py
examples/typescript/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
examples/typescript/src/: cbor-canonical.ts  cbor-walker.ts  cid-validator.ts  cip-309-encoder.ts  cip-309-validator.ts  cose-sign1.ts  ecies-sealed-poe.ts  ed25519.ts  end-to-end.ts  hash-dual.ts  hkdf.ts  label-309-encoder.ts  label-309-validator.ts  merkle-batch.ts  merkle-leaves-list.ts  merkle-sha2-256.ts  mlkem768x25519.ts  off-host-sign.ts  passphrase-kdf-unwrap.ts  sealed-poe.ts  seed-derive.ts  smoke-parity.ts  smoke-tx-extract.ts  smoke-validator.ts  standalone-verifier.ts  standalone-verify-example.ts  validate-record.ts  verify-offline.ts  x25519.ts
registries/: README.md  aead-algorithms.json  companion-cips.json  error-codes.json  hash-algorithms.json  kdf-algorithms.json  kem-algorithms.json  merkle-commitment-algorithms.json  signature-algorithms.json
schemas/: README.md  chunked-bytes-array.schema.json  defs.schema.json  encryption-envelope.schema.json  encryption-slot.schema.json  hash-map.schema.json  item-entry.schema.json  merkle-commit.schema.json  merkle-leaves.schema.json  passphrase-block.schema.json  poe-record.schema.json  sig-entry.schema.json  supersedes.schema.json  uri-chunk-array.schema.json
spec/: README.md  cip-0309.md  label-309.md
