[project]
name = "cip309-examples"
version = "0.1.0"
description = "Self-contained Python reference implementations of the CIP-309 wire primitives. Byte-parity twin of the TypeScript examples; depends only on public cryptography libraries, not on any published SDK."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Cardanowall", email = "hello@cardanowall.com" }]
keywords = ["cip-309", "cardano", "proof-of-existence", "cbor", "cose", "reference-implementation"]

dependencies = [
  "cryptography>=44,<49",
  "PyNaCl>=1.5,<2",
  "cbor2>=5.6,<7",
  "argon2-cffi>=23,<26",
  "kyber-py==1.2.0",
  "httpx>=0.28,<1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.13,<1",
  "mypy>=1.15,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cip309_examples"]

# ---------------------------------------------------------------------------
# Ruff — lint + format. Clean-project defaults for a small, auditable codebase.
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific
]
# The reference impls deliberately catch broad exceptions at trust boundaries
# (trial-decrypt non-matches, gateway failures) and return typed results rather
# than propagate — that pattern is intentional, not a lint smell.
ignore = [
  "E501",   # long lines in pinned hex / comments are fine
  "BLE001", # blind-except is intentional at the decrypt / fetch trust boundary
  "B904",   # not every re-raise needs `from` in these reference snippets
  "RUF005", # `path + [key]` reads clearer than `[*path, key]` in the validator
]

[tool.ruff.lint.per-file-ignores]
# Internal ML-KEM primitives are addressed by name on purpose; keep them visible.
"cip309_examples/mlkem768x25519.py" = ["SLF001"]
"cip309_examples/ecies_sealed_poe.py" = ["S101"]  # asserts document invariant lengths
"cip309_examples/off_host_sign.py" = ["S101"]
"end_to_end.py" = ["S101", "T201"]

# ---------------------------------------------------------------------------
# Mypy — type-check the package. Third-party crypto libs ship partial stubs;
# ignore missing imports rather than vendor stub packages.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
