[project]
name = "label-309-examples"
version = "0.1.0"
description = "Runnable Python examples for the Label 309 Proof-of-Existence standard, driving the published reference SDK (cardanowall-sdk). Behavioural twin of the TypeScript examples."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["label-309", "cardano", "proof-of-existence", "cbor", "cose", "examples"]

dependencies = [
  # The reference SDK: wire format (cardanowall.poe_standard), standalone
  # verifier (cardanowall.verifier), sealed-PoE encryption, seed-derived keys,
  # and Merkle tooling. The range tracks the current published 0.x line; the
  # examples are written against the same revision of the standard as the
  # specification beside them.
  "cardanowall-sdk>=0.3,<1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.13,<1",
  "mypy>=1.15,<3",
]

# Example scripts, not a distributable package: nothing is built or installed
# beyond the dependencies above.
# A flat collection of runnable example scripts, not a distributable package:
# installing this project pulls in its dependencies only.
[tool.setuptools]
py-modules = []

[tool.uv]
package = false

# ---------------------------------------------------------------------------
# Ruff — lint + format.
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "UP",   # pyupgrade
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "SIM",  # flake8-simplify
  "RUF",  # ruff-specific
]
ignore = [
  "E501", # long lines in pinned hex / table-style comments are fine
]

# ---------------------------------------------------------------------------
# Mypy — type-check the example scripts.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
